tests/snapshots/hover__hover_on_class.snap
---
source: tests/hover.rs
expression: markup.value
---
```python
class DataLoader:
    """A simple data loader for testing."""

    def __init__(self, batch_size: int, shuffle: bool = False, num_workers: int = 0):
        """Initialize the data loader.

        Args:
            batch_size: Size of each batch
            shuffle: Whether to shuffle the data (default: False)
            num_workers: Number of worker threads (default: 0)
        """
```
