tests/snapshots/hover__hover_on_grandchild_inherited_init.snap
---
source: tests/hover.rs
expression: markup.value
---
```python
class GrandchildWithoutInit(ChildWithoutInit):
    """Grandchild class that inherits __init__ from grandparent through parent."""

    def __init__(self, name: str, value: int = 0):
        """Initialize parent.

        Args:
            name: The name parameter
            value: Optional value (default: 0)
        """
```
