tests/snapshots/hover__hover_on_long_function.snap
---
source: tests/hover.rs
expression: markup.value
---
```python
def my_long_func(
    param1: int,
    param2: str = 'default',
    param3: float = 3.14,
    param4 = True
) -> None:
    """A function with a really long signature to test line wrapping in documentation.

    Args:
        param1: An integer parameter
        param2: A string parameter with default
        param3: A float parameter with default
        param4: A boolean parameter with default
    """
```
